# Comfyui-Erase-Watermarks

./: ReadMe.md  lama_onnx_loader.py  nodes.py  pyproject.toml  region_eraser.py
workflow/: Comfyui-erase-watermarks-base.json  示例1：图像遮罩区域水印擦除（支持任意元素擦除）.json  示例2：自动检测可见水印并生成报告.json  示例3：自动移除全局可见水印.json  示例4：移除不可见水印 (ERAW).json
